[gd_scene load_steps=14 format=2]

[ext_resource path="res://HERO/HERO.tscn" type="PackedScene" id=1]
[ext_resource path="res://GAME_SCRIPT.gd" type="Script" id=2]
[ext_resource path="res://sfx/explosions/explosion1.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/explosions/explosion2.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/explosions/explosion3.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/explosions/explosion4.wav" type="AudioStream" id=6]
[ext_resource path="res://music/DiggerGame_MUSIC.wav" type="AudioStream" id=7]
[ext_resource path="res://FX/InstructionsScene.tscn" type="PackedScene" id=8]
[ext_resource path="res://png/screen.png" type="Texture" id=9]
[ext_resource path="res://FONTS/FreePixel.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://sfx/milesone6.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=2]
size = 23
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 4.17
glow_strength = 1.9
glow_hdr_threshold = 0.8
glow_hdr_luminance_cap = 1.0
glow_hdr_scale = 2.79
adjustment_enabled = true
adjustment_contrast = 1.75

[node name="GAME" type="Node2D"]
script = ExtResource( 2 )

[node name="TILE_HOLDER" type="Node2D" parent="."]
z_index = -3

[node name="Hero" parent="." instance=ExtResource( 1 )]
position = Vector2( 300, 0 )
z_index = 1
z_as_relative = false

[node name="Timer" type="Timer" parent="Hero"]
wait_time = 0.25
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="LABEL_DEPTH" type="RichTextLabel" parent="UI"]
anchor_right = 0.056
margin_left = 23.0
margin_top = 23.0
margin_right = 399.48
margin_bottom = 223.0
rect_clip_content = false
custom_fonts/normal_font = SubResource( 2 )
text = "depth"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LABEL_FPS" type="RichTextLabel" parent="UI"]
visible = false
margin_left = 14.6496
margin_top = 39.6836
margin_right = 166.65
margin_bottom = 68.6836
text = "fps"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LABEL_KILLS" type="RichTextLabel" parent="UI"]
visible = false
margin_left = 14.6496
margin_top = 66.1121
margin_right = 166.65
margin_bottom = 95.1121
text = "cam"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TEXT_LOC" type="Node2D" parent="UI"]
position = Vector2( 100, 100 )

[node name="INSTRUCTIONS" parent="UI" instance=ExtResource( 8 )]
visible = false
position = Vector2( 210, 200 )
scale = Vector2( 0.4, 0.4 )

[node name="Sounds" type="Node" parent="."]

[node name="milestone" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
volume_db = -15.0
bus = "audio_fx"

[node name="explosion1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = -28.0

[node name="explosion2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = -25.0

[node name="explosion3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
volume_db = -23.0

[node name="explosion4" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -23.0

[node name="FX" type="Node2D" parent="."]
z_index = -1
z_as_relative = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 1
process_priority = -5
stream = ExtResource( 7 )
volume_db = -12.0
mix_target = 2
bus = "audio_fx"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 4, 4 )
scroll_limit_begin = Vector2( 1000, 0 )
scroll_limit_end = Vector2( 2000, 0 )
scroll_ignore_camera_zoom = true

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
modulate = Color( 0.396078, 0.0627451, 0.0627451, 1 )
texture = ExtResource( 9 )
centered = false

[connection signal="finished" from="MusicPlayer" to="." method="_on_AudioStreamPlayer_finished"]
